# book_extracter

./: .gitignore  book.py  pyproject.toml
