[project]
name = "book-extractor"
version = "0.1.0"
description = "Extract web content (text + images) and export to a formatted Word document"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "python-docx>=1.1.0",
    "Pillow>=10.0.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
book = "book:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []
